changes file name of the index.html inti index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GSD-Community</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,7 +26,8 @@
           <ul>
             <li><a href="#home">Beranda</a></li>
             <li><a href="#tentang">Tentang</a></li>
-            <li><a href="#">Testimonial</a></li>
+            <li><a href="#lakukan">Lakukan</a></li>
+            <li><a href="#testimonial">Testimonial</a></li>
           </ul>
           <div class="sign-in">
             <a href="">Sign In</a>
@@ -47,7 +48,7 @@
         <a href="#">Get's Started</a>
       </div>
       <div class="conten-gambar">
-        <img src="makanan-removebg-preview (1).png" alt="" />
+        <img src="assets/image/makanan-removebg-preview (1).png" alt="" />
       </div>
     </section>
     <!-- Akhir conten -->
@@ -59,28 +60,28 @@
         <hr />
       </div>
       <div class="tentang-deskripsi">
-        <img src="logo-gsd.png" alt="" />
+        <img src="assets/image/logo-gsd.png" alt="" />
         <p>GSD-Community adalah komunitas yang membahas permasalahan yang sering muncul di masyarakat pada umumnya. Jadi GSD-Community pada website ini komunitas kami akan memberikan pemahaman mengenai Pola Makan Sehat</p>
       </div>
       <div class="bawah"></div>
       <div class="absolute-item">
         <div class="border-latar">
           <div class="border-conten">
-            <img src="icon-profile-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-profile-removebg-preview.png" alt="" />
             <p>
               150 Orang <br />
               Telah Bergabung
             </p>
           </div>
           <div class="border-conten">
-            <img src="icon-aktivitas-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-aktivitas-removebg-preview.png" alt="" />
             <p>
               150 Orang <br />
               Telah Bergabung
             </p>
           </div>
           <div class="border-conten">
-            <img src="icon-berhasil-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-berhasil-removebg-preview.png" alt="" />
             <p>
               150 Orang <br />
               Telah Bergabung
@@ -103,24 +104,75 @@
       <div class="border-waktu-kegiatan">
         <div class="border-kegiatan">
           <div class="border-waktu">
-            <img src="icon-matahari-pagi-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-matahari-pagi-removebg-preview.png" alt="" />
           </div>
           <p>mengonsumsi sarapan sebesar 300 sampai 600 kilo kalori</p>
         </div>
-        <div class="border-kegiatan">
+        <div class="border-kegiatan2">
           <div class="border-waktu2">
-            <img src="icon-matahari-siang-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-matahari-siang-removebg-preview.png" alt="" />
           </div>
           <p>Jumlah kalori total makan siang berkisar antara 400 hingga 500 kalori</p>
         </div>
-        <div class="border-kegiatan">
+        <div class="border-kegiatan3">
           <div class="border-waktu3">
-            <img src="icon-bulan-removebg-preview.png" alt="" />
+            <img src="assets/image/icon-bulan-removebg-preview.png" alt="" />
           </div>
           <p>makan malam anda maksimal sekitar 600 kalori, porsi ini tidak di sarankan untuk semua orang</p>
         </div>
       </div>
     </section>
     <!-- Akhir Trying -->
+
+    <!-- Testimoni -->
+    <section id="testimonial">
+      <div class="judul-testimoni">
+        <h4>Testimonial</h4>
+        <hr />
+      </div>
+      <div class="conten-testimoni">
+        <div class="gambar-kutip-2">
+          <img src="assets/image/icon-kutip2-removebg-preview.png" alt="" />
+        </div>
+        <div class="container">
+          <div class="card-testi">
+            <img src="assets/image/wajah-testi-1-removebg-preview2.png" alt="wajah-testi" />
+            <p>pola makan ini sangat work-it lebih lagi di imbangi dengan olahraga</p>
+            <h6>Carlos</h6>
+          </div>
+          <div class="card-testi2">
+            <img src="assets/image/wajah-testi-2-removebg-preview.png" alt="wajah-testi" />
+            <p>setelah saya melakukan pola makan seperti ini saya merasa badan lebih ringan dan bugar</p>
+            <h6>Susanti</h6>
+          </div>
+          <div class="card-testi3">
+            <img src="assets/image/wajah-testi-3-removebg-preview.png" alt="wajah-testi" />
+            <p>Program ini sangat membantu saya menjaga body saya</p>
+            <h6>Emili</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Testimoni -->
+    <section id="footer">
+      <div class="deskription-footer">
+        <div class="copy">
+          <h5>GSD-Community</h5>
+          <p>Copyright &copy; GSD-Community 2022</p>
+        </div>
+        <div class="about">
+          <h5>About</h5>
+          <p>about me</p>
+          <p>our website</p>
+          <p>learning</p>
+        </div>
+        <div class="contact">
+          <h5>Contact</h5>
+          <p>instagram</p>
+          <p>whatsapp</p>
+          <p>facebook</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
