--- a/index.html
+++ b/index.html
@@ -162,15 +162,16 @@
         </div>
         <div class="about">
           <h5>About</h5>
-          <p>about me</p>
-          <p>our website</p>
-          <p>learning</p>
+          <a href="">About me</a>
+          <a href="">Our website</a>
+          <a href="">Learning</a>
         </div>
         <div class="contact">
           <h5>Contact</h5>
-          <p>instagram</p>
-          <p>whatsapp</p>
-          <p>facebook</p>
+          <a href="">Instagram</a>
+          <a href="">WhatsApp</a>
+          <a href="">Facebook</a>
+          <a href="">Location</a>
         </div>
       </div>
     </section>
