--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
           <div class="border-waktu">
             <img src="assets/image/icon-matahari-pagi-removebg-preview.png" alt="" />
           </div>
-          <p>mengonsumsi sarapan sebesar 300 sampai 600 kilo kalori</p>
+          <p style="color: black">mengonsumsi sarapan sebesar 300 sampai 600 kilo kalori</p>
         </div>
         <div class="border-kegiatan2">
           <div class="border-waktu2">
             <img src="assets/image/icon-matahari-siang-removebg-preview.png" alt="" />
           </div>
-          <p>Jumlah kalori total makan siang berkisar antara 400 hingga 500 kalori</p>
+          <p style="color: black">Jumlah kalori total makan siang berkisar antara 400 hingga 500 kalori</p>
         </div>
         <div class="border-kegiatan3">
           <div class="border-waktu3">
             <img src="assets/image/icon-bulan-removebg-preview.png" alt="" />
           </div>
-          <p>makan malam anda maksimal sekitar 600 kalori, porsi ini tidak di sarankan untuk semua orang</p>
+          <p style="color: black">makan malam anda maksimal sekitar 600 kalori, porsi ini tidak di sarankan untuk semua orang</p>
         </div>
       </div>
     </section>
