--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
           <div class="nav-logo">
             <a href="">GSD-Community</a>
           </div>
+          <div class="toggle-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
           <div class="nav-link">
             <ul>
               <li><a href="#home">Beranda</a></li>
               <li><a href="#tentang">Tentang</a></li>
               <li><a href="#lakukan">Lakukan</a></li>
               <li><a href="#testimonial">Testimonial</a></li>
+              <li><a class="button" href="#">Sign In</a></li>
             </ul>
-            <div class="sign-in">
-              <a href="">Sign In</a>
-            </div>
           </div>
         </div>
       </section>
@@ -77,15 +80,15 @@
             <div class="border-conten">
               <img src="assets/image/icon-aktivitas-removebg-preview.png" alt="" />
               <p>
-                150 Orang <br />
-                Telah Bergabung
+                50 Orang <br />
+                Sedang Menjalani
               </p>
             </div>
             <div class="border-conten">
               <img src="assets/image/icon-berhasil-removebg-preview.png" alt="" />
               <p>
-                150 Orang <br />
-                Telah Bergabung
+                100 Orang <br />
+                Telah Berhasil
               </p>
             </div>
           </div>
@@ -177,5 +180,6 @@
         </div>
       </section>
     </div>
+    <script src="assets/style/script.js"></script>
   </body>
 </html>
